# poetry_poc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: __init__.py
